--- a/examples/assets/demo.css
+++ b/examples/assets/demo.css
@@ -1,3 +1,12 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 14px;
+  line-height: 1.5em;
+  margin: 0;
+}
+
 .main {
   display: flex;
   flex-direction: column;
