--- a/src/index.scss
+++ b/src/index.scss
@@ -1,64 +1,77 @@
-// prettier-ignore
-$alert-themes:
-  'primary'   #ebf8ff #4299e1 #2b6cb0,
-  'success'   #f0fff4 #68d391 #2f855a,
-  'warning'   #fffaf0 #ed8936 #c05621,
-  'alert'    #fff5f5 #fc8181 #c53030,
-  'dark'      #2d3748 #1a202c #d3d3d3;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@mixin alert-variant($backgorund-color, $border-color, $content-color) {
-  background-color: $backgorund-color;
+// prettier-ignore
+// $background-color, $border-color, $content-color
+$alert-themes:
+  "primary" #d9ecff #66b3ff #2d3640,
+  "success" #d9f7e7 #66e09d #2d3640,
+  "warning" #fff5d9 #ffd666 #2d3640,
+  "alert" #fde2dd #f78b74 #2d3640,
+  "dark" #2d3640 #2d3640 #ffffff;
+
+@mixin alert-variant($background-color, $border-color, $content-color) {
+  background-color: $background-color;
   border: 1px solid $border-color;
   color: $content-color;
 }
 
-@mixin settings-icon-variant($backgorund-color, $border-color, $content-color) {
-  svg {
-    #background {
-      fill: $backgorund-color;
-      stroke: $border-color;
-    }
-    #content {
-      fill: $content-color;
-    }
-  }
-}
-
 .cdx-alert {
   position: relative;
-  padding: 10px;
-  border-radius: 5px;
+  padding: 16px 20px;
+  border-radius: 6px;
   margin-bottom: 10px;
+  font-family: "Roboto", sans-serif;
 }
 
-@each $name, $backgorund-color, $border-color, $content-color in $alert-themes {
-  .cdx-alert-#{$name} {
-    @include alert-variant($backgorund-color, $border-color, $content-color);
+@each $name, $background-color, $border-color, $content-color in $alert-themes {
+  .cdx-alert--#{$name} {
+    @include alert-variant($background-color, $border-color, $content-color);
   }
 }
 
-.cdx-alert-align-left {
+.cdx-alert--left {
   text-align: left;
 }
-.cdx-alert-align-center {
+.cdx-alert--center {
   text-align: center;
+
+  .cdx-alert__message[contentEditable="true"][data-placeholder] {
+    &::before {
+      transform: translateX(-50%);
+    }
+  }
 }
-.cdx-alert-align-right {
+.cdx-alert--right {
   text-align: right;
+  .cdx-alert__message[contentEditable="true"][data-placeholder] {
+    &::before {
+      transform: translateX(-100%);
+    }
+  }
 }
 
 .cdx-alert__message {
   outline: none;
+  position: relative;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-.cdx-alert [contentEditable="true"][data-placeholder] {
+.cdx-alert .cdx-alert__message[contentEditable="true"][data-placeholder] {
   &::before {
     position: absolute;
     content: attr(data-placeholder);
-    color: #707684;
+    color: #5c6b7a;
     font-weight: normal;
     opacity: 0;
     pointer-events: none;
+    white-space: nowrap;
+
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
   }
 
   &:empty::before {
@@ -70,8 +83,15 @@ $alert-themes:
   }
 }
 
-@each $name, $backgorund-color, $border-color, $content-color in $alert-themes {
-  .ce-popover__item[data-item-name="alert-#{$name}"] .ce-popover__item-icon {
-    @include settings-icon-variant($backgorund-color, $border-color, $content-color);
+.cdx-alert--dark .cdx-alert__message[contentEditable="true"][data-placeholder] {
+  &::before {
+    color: #81878c;
+  }
+}
+
+#editorjs {
+  // hide convert to
+  .ce-inline-toolbar__toggler-and-button-wrapper .ce-inline-toolbar__dropdown {
+    display: none;
   }
 }
